 $Id: ChangeLog,v 1.109 2005/05/17 15:27:53 uehira Exp $

2005-05-18 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* recvstatus3.c : don't compile IPv4 only environment.
	* added 'mkpicknoise'
	* Version 1.1.64 released.
	  
2005-04-26 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* added 'recvstatus3'. receive A8/A9 packets from Daramark
	  LS-8000SH of LS8TEL14/16 firmware
	* Version 1.1.63 released.
	  
2005-04-20 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* win.1, pickfile.1, pick2pick.1 : updated.
	* Version 1.1.62 released.
	  
2005-04-14 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* recvnmx, recvnmx.1 : -n (NP packet) added.
	* raw_shift.1 : bug fixed.
	* Version 1.1.61 released.

2005-03-18 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* insert_raw.c, insert_trg.c, wdiskts.c, raw_time.c
	  - memory leak check code
	  
2005-03-17 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* raw_time : time shift filter (raw format version of wtime)
	* added configure option: --enable-memory-leak-check
	* Version 1.1.60 released.

2005-03-15 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* wdiskts : improved memory management.

2005-03-15 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* rtape/fromtape : made smart in obtaining bl_count.
	* shmdump.1 : bug fixed (-x).
	* Version 1.1.59 released.

2005-03-12 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* send_raw : bug fixed.
	* insert_raw : memory leak bug fixed.
	* insert_trg : memory leak bug fixed.
	* Version 1.1.58 released.

2005-03-07 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* raw_raw : added daemon mode (raw_rawd)
	* Version 1.1.57 released.

2005-02-20 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* recvt.c : option -f [ch file] for additional channels file(s)
	* many programs : added fclose() in read_chfile()
	* Version 1.1.56 released.

2005-02-14,17,18 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* recvt.c : option -o [source host]:[port] for send request
	* send_raw.c : option -f for use and write list of requested chs